[tool.poetry]
name = "enos"
version = "8.0.0a5"
description = "Experimental eNvironment for OpenStack"
authors = ["Didier Iscovery <discovery-dev@inria.fr>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://github.com/BeyondTheClouds/enos"
documentation = "https://beyondtheclouds.github.io/enos/"
keywords = ["OpenStack", "Evaluation", "Grid'5000", "Chameleon", "Vagrant"]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: System Administrators',
  'Intended Audience :: Science/Research',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]
include = [
  'README.rst',
  'LICENSE',
  'enos/ansible/**/*',
  'enos/ansible.cfg',
  'enos/provider/openstack.sh',
  'enos/resources/**/*',
]

[tool.poetry.dependencies]
python = "^3.8"
# enoslib = { path = '../enoslib', develop = true, extras = [ "chameleon" ]  }
enoslib = { version = "^8.1.2", extras = [ "chameleon" ] }
# Our ansible_filter_loader hack (to load Jinja context filters from Kolla)
# no longer works with recent versions of Ansible, so let's stick to 2.9 for now.
ansible = { version = "~2.9" }
docopt = ">=0.6.2,<0.7.0"
virtualenv = "^20.4.3"
python-openstackclient = "^6.0.0"
python-heatclient = "^2.5.0"
influxdb = { version = "4.0.0", optional = true }

[tool.poetry.extras]
# poetry install -E annotations
annotations = ["influxdb"]

[tool.poetry.scripts]
enos = "enos.cli:main"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
ipdb = "^0.13.7"
tox = "^3.23.0"
pytest = "^6.2.3"
flake8 = "^3.9.0"
mock = "^4.0.3"
ddt = "^1.4.2"
# doc
GitPython = ">=2.1.5"
Sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
